// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot on data 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on data 2`] = `
<div>
  <h1>
    Ooops!
  </h1>
  <h2>
    Something went wrong
  </h2>
  <pre>
    TypeError: Cannot read property 'tablet' of undefined
  </pre>
</div>
`;

exports[`App renders snapshot on error 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on error 2`] = `
<div>
  <strong>
    error
  </strong>
</div>
`;
